--- a/tests/integration/targets/podman_load/tasks/main.yml
+++ b/tests/integration/targets/podman_load/tasks/main.yml
@@ -1,15 +1,18 @@
 ---
 - name: Pull image
   containers.podman.podman_image:
+    executable: "{{ test_executable | default('podman') }}"
     name: k8s.gcr.io/pause
 
 - name: Save image
   containers.podman.podman_save:
+    executable: "{{ test_executable | default('podman') }}"
     image: k8s.gcr.io/pause
     dest: /tmp/image.tar
 
 - name: Load image
   containers.podman.podman_load:
+    executable: "{{ test_executable | default('podman') }}"
     input: /tmp/image.tar
   register: image
 
@@ -21,12 +24,14 @@
 
 - name: Save image
   containers.podman.podman_save:
+    executable: "{{ test_executable | default('podman') }}"
     image: k8s.gcr.io/pause
     dest: /tmp/imagedir
     format: oci-dir
 
 - name: Load image from oci-dir
   containers.podman.podman_load:
+    executable: "{{ test_executable | default('podman') }}"
     input: /tmp/imagedir
   register: image
 
@@ -38,12 +43,14 @@
 
 - name: Save image with multi image archive
   containers.podman.podman_save:
+    executable: "{{ test_executable | default('podman') }}"
     image: k8s.gcr.io/pause
     dest: /tmp/image2.tar
     multi_image_archive: true
 
 - name: Load image from oci-dir multi image archive
   containers.podman.podman_load:
+    executable: "{{ test_executable | default('podman') }}"
     input: /tmp/image2.tar
   register: image
 
@@ -55,6 +62,7 @@
 
 - name: Pull images
   containers.podman.podman_image:
+    executable: "{{ test_executable | default('podman') }}"
     name: '{{ item }}'
   loop:
     - k8s.gcr.io/coredns:1.7.0
@@ -71,6 +79,7 @@
 
 - name: Load image from oci-dir multi image archive
   containers.podman.podman_load:
+    executable: "{{ test_executable | default('podman') }}"
     input: /tmp/multi.tar
   register: image
 
