--- a/tests/integration/targets/podman_login/tasks/main.yml
+++ b/tests/integration/targets/podman_login/tasks/main.yml
@@ -14,7 +14,7 @@
         username: doesntmatter
         password: nopassword
       register: invalid_executable
-      ignore_errors: yes
+      ignore_errors: true
 
     - name: Check invalid executable results
       assert:
@@ -23,11 +23,12 @@
 
     - name: Wrong login to registry.fedoraproject.org
       containers.podman.podman_login:
+        executable: "{{ test_executable | default('podman') }}"
         username: notexist
         password: notexistaswell
         registry: docker.io
       register: loginf
-      ignore_errors: yes
+      ignore_errors: true
 
     - name: Check login
       assert:
@@ -36,11 +37,12 @@
 
     - name: Login to registry.fedoraproject.org
       containers.podman.podman_login:
+        executable: "{{ test_executable | default('podman') }}"
         username: foo
         password: bar
         registry: registry.fedoraproject.org
       register: login
-      ignore_errors: yes
+      ignore_errors: true
 
     - name: Check login
       assert:
