--- a/tests/integration/targets/podman_secret/tasks/main.yml
+++ b/tests/integration/targets/podman_secret/tasks/main.yml
@@ -3,16 +3,19 @@
 
     - name: Make sure secret doesn't exist
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         state: absent
         name: mysecret
 
     - name: Create secret
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         name: mysecret
         data: secret content
 
     - name: Recreate secret
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         name: mysecret
         data: super secret content
         force: true
@@ -20,6 +23,7 @@
 
     - name: Skip secret
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         name: mysecret
         data: super secret content
         skip_existing: true
@@ -67,6 +71,7 @@
 
     - name: Remove secret
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         state: absent
         name: mysecret
       register: removed
@@ -78,6 +83,7 @@
 
     - name: Remove secret
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         state: absent
         name: mysecret
       register: removed
@@ -89,6 +95,7 @@
 
     - name: Create secret with file driver and custom options
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         name: mysecret
         data: secret content
         driver: file
@@ -98,6 +105,7 @@
 
     - name: Remove secret
       containers.podman.podman_secret:
+        executable: "{{ test_executable | default('podman') }}"
         state: absent
         name: mysecret
 
